al click campo minato random

--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@
   border: solid 1px black;
 }
 
-.red {
+/* .red {
   background-color: red;
 }
 
 .green {
   background-color: green;
-}
+} */
